Fix gap and removed individual margin

--- a/styles/main.css
+++ b/styles/main.css
@@ -31,6 +31,8 @@ body {
   width: 384px;
   border: 1px solid hsl(0, 0%, 7%);
   box-shadow: 8px 8px;
+  margin: 0;
+  gap: 24px;
 
   img {
     border-radius: 10px;
@@ -43,7 +45,7 @@ body {
 
 article {
   justify-content: center;
-  margin: 12px 0px;
+
 }
 
 .date {
@@ -52,7 +54,10 @@ article {
 
 h3 {
   font-size: 24px;
-  margin: 0;
+  margin-top: 12px;
+  margin-bottom: 12px;
+
+
 
   &:hover {
     color: hsl(47, 88%, 63%);
@@ -77,7 +82,7 @@ h3 {
   font-weight: 800;
   font-size: 14px;
   display: inline-block;
-  margin-top: 12px;
+
 }
 
 .profile {
@@ -109,7 +114,7 @@ h3 {
   color: hsl(228, 45%, 44%);
 }
 
-@media (max-width: 375px) {
+@media (max-width: 400px) {
   body {
     font-size: 14px;
   }
@@ -129,7 +134,5 @@ h3 {
     width: 327px;
   }
 
-  .main-content {
-    margin: 12px 0 0;
-  }
+  .main-content {}
 }
